syntax = "proto3";

//
// HoloCanvas :: shared :: protocol :: ledger.proto
//
// Ledger protocol definitions for the HoloCanvas micro-gallery blockchain.
//
// This file is consumed by multiple micro-services written in C (via
// protobuf-c) and other languages (Go, Rust, TS).  All changes MUST maintain
// wire-compatibility.  When a breaking change is unavoidable, bump
// `Header.version` and introduce a new package namespace.
//
// Generated C code prototype (protobuf-c):
//   $ protoc-c --c_out=. ledger.proto
//
// ---------------------------------------------------------------------------
// © 2024 HoloCanvas Contributors – MIT License
// ---------------------------------------------------------------------------
//

package holoCanvas.shared.protocol;

option optimize_for = SPEED;              // Critical on embedded nodes.
option java_multiple_files = true;
option java_package        = "org.holocanvas.proto";
option go_package          = "github.com/holocanvas/proto;proto";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";


//-----------------------------------------------------------------------------
// Enumerations
//-----------------------------------------------------------------------------

// Supported HoloCanvas network segments.
enum NetworkId {
    NETWORK_UNSPECIFIED = 0;
    NETWORK_MAINNET     = 1;
    NETWORK_TESTNET     = 2;
    NETWORK_REGNET      = 3;  // Local dev-net, deterministic RNG.
}

// Type of ledger transaction.
enum TransactionType {
    TX_UNSPECIFIED    = 0;
    TX_MINT           = 1;  // Factory-Pattern NFT mint.
    TX_TRANSFER       = 2;  // Ownership transfer.
    TX_BID            = 3;  // Auction bid.
    TX_STAKE          = 4;  // DeFi stake.
    TX_GOVERNANCE     = 5;  // DAO governance vote.
    TX_CONTRACT_CALL  = 6;  // Smart-contract invocation.
}

// Lifecycle state for an on-chain Artifact NFT.
enum ArtifactState {
    ARTIFACT_STATE_UNSPECIFIED = 0;
    ARTIFACT_STATE_DRAFT       = 1;
    ARTIFACT_STATE_CURATED     = 2;
    ARTIFACT_STATE_AUCTION     = 3;
    ARTIFACT_STATE_FRACTIONAL  = 4;
    ARTIFACT_STATE_STAKED      = 5;
}


//-----------------------------------------------------------------------------
// Core Structures
//-----------------------------------------------------------------------------

// Standard block header.
message Header {
    uint32                  version       = 1;   // SemVer MAJOR (breaking changes).
    NetworkId               network_id    = 2;
    bytes                   previous_hash = 3;   // 32-byte SHA-256.
    bytes                   merkle_root   = 4;   // 32-byte SHA-256 of tx root.
    uint64                  height        = 5;
    google.protobuf.Timestamp timestamp   = 6;
    bytes                   producer_pub  = 7;   // Block producer public key.
    bytes                   signature     = 8;   // Header sig (producer_priv).
}

// Transaction body excluding wrapper metadata.
message TransactionBody {
    TransactionType         type          = 1;
    bytes                   from          = 2;  // 32-byte account / contract.
    bytes                   to            = 3;  // 32-byte account / contract.
    uint64                  value         = 4;  // Native token amount (atto-HCN).
    uint64                  fee           = 5;  // Paid to block producer.
    uint64                  nonce         = 6;  // Sender-side tx sequence.
    string                  artifact_id   = 7;  // Optional NFT/Artifact reference.
    google.protobuf.Any     payload       = 8;  // Contract-specific blob.
    google.protobuf.Timestamp timestamp   = 9;
}

// Signed transaction wrapper.
message Transaction {
    string          hash      = 1; // 32-byte hex of double-SHA-256(body|sig).
    TransactionBody body      = 2;
    bytes           signature = 3; // Ed25519 signature of body.
}

// A fully-formed, validated block.
message Block {
    Header                header        = 1;
    repeated Transaction  transactions  = 2;
    bytes                 block_hash    = 3; // 32-byte SHA-256(header).
}


//-----------------------------------------------------------------------------
// Ledger Events (Observer Pattern)
//-----------------------------------------------------------------------------

// Event dispatched via gRPC stream.
message LedgerEvent {
    oneof event {
        Block               block_mined   = 1;
        TransactionAccepted tx_accepted   = 2;
        ArtifactStateUpdate artifact_evt  = 3;
    }
}

// Transaction accepted event.
message TransactionAccepted {
    string  tx_hash   = 1;
    NetworkId network = 2;
}

// NFT state update event.
message ArtifactStateUpdate {
    string        artifact_id   = 1;
    ArtifactState new_state     = 2;
    google.protobuf.Timestamp at = 3;
}


//-----------------------------------------------------------------------------
// RPC Request / Response Messages
//-----------------------------------------------------------------------------

// Submit a signed transaction.
message SubmitTransactionRequest {
    Transaction tx = 1;
}

// Successful only if google.rpc.Status.code == 0.
message SubmitTransactionResponse {
    google.rpc.Status status  = 1;
    string            tx_hash = 2;
}

// Retrieve a block by height or hash.
message GetBlockRequest {
    oneof selector {
        uint64 height = 1;
        bytes  hash   = 2; // 32-byte SHA-256.
    }
}

message GetBlockResponse {
    google.rpc.Status status = 1;
    Block             block  = 2;
}

// Query token balance for an account.
message QueryBalanceRequest {
    bytes account = 1; // 32-byte account.
}

message QueryBalanceResponse {
    google.rpc.Status status          = 1;
    uint64            confirmed_balance = 2;
    uint64            pending_balance   = 3;
}

// Stream blocks starting from a given height (inclusive).
message StreamBlocksRequest {
    uint64 from_height = 1;
    bool   include_tx  = 2; // If false, tx list is omitted for bandwidth.
}

// Stream ledger events based on a filter.
message StreamLedgerEventsRequest {
    repeated TransactionType interested_tx_types = 1;
    repeated ArtifactState   interested_states   = 2;
}


//-----------------------------------------------------------------------------
// Ledger gRPC Service Definition
//-----------------------------------------------------------------------------

service LedgerService {

    // Submit a raw, signed transaction to the mempool.
    rpc SubmitTransaction (SubmitTransactionRequest)
        returns (SubmitTransactionResponse) {
        // On failure, status will contain canonical google.rpc.Code:
        //   - ALREADY_EXISTS if tx is duplicate
        //   - INVALID_ARGUMENT if tx fails stateless validation
        //   - RESOURCE_EXHAUSTED if mempool is full
    }

    // Fetch a single block.
    rpc GetBlock (GetBlockRequest) returns (GetBlockResponse);

    // Continuous stream of blocks for catch-up/replication.
    rpc StreamBlocks (StreamBlocksRequest)
        returns (stream Block);

    // Retrieve token balances.
    rpc QueryBalance (QueryBalanceRequest)
        returns (QueryBalanceResponse);

    // Receive real-time ledger events (Observer Pattern).
    rpc StreamLedgerEvents (StreamLedgerEventsRequest)
        returns (stream LedgerEvent);
}

//
// End of ledger.proto
//-----------------------------------------------------------------------------